# py_obsidian_task

./: .gitignore  README.md  pyproject.toml
TEST_task_calls/: Page name.md  Welcome.md
TEST_task_calls/.obsidian/: Page name.md  workspace.json
py_obsidian_task/: extract_task.py  google_tasks.py  injection_tasks.py  markdown_tasks.py  quickstart.py
tests/: test_extract_task.py  test_google_tasks.py  test_injection_tasks.py  test_markdown_tasks.py
